Finalização do escopo do projeto no arquivo ipynb

--- a/projeto.ipynb
+++ b/projeto.ipynb
@@ -3,13 +3,34 @@
   {
    "cell_type": "markdown",
    "source": [
+    "<h1 style=\"color:darkgreen\">Análise dos sorteios do NF Premiada MS </h1>\r\n",
+    "\r\n",
+    "<h2 style=\"color:darkgray\">Oque é o NF premiada MS?</h2>\r\n",
+    "<h3> É um programa de incentivo de participação fiscal popular em que o governo do estado do Mato Grosso do Sul gera 8 dezenas de 01 a 60 quando o cliente pede o CPF na nota</h3>\r\n",
+    "\r\n",
+    "<h2 style=\"color:darkgray\"> Como é o sorteio? </h2>\r\n",
+    "<h3> O sorteio é realizado uma vez por mês, ao final do mês utilizando os números da Mega-sena</h3>\r\n",
+    "\r\n",
+    "<h2 style=\"color:darkgray\"> E a premiação? </h2>\r\n",
+    "<h3> A premiação é dividida em: R$ 100.000,00 para os ganhadores das 6 dezenas e R$ 200.000,00 para os ganhadores\r\n",
+    "das 5 dezenas. Ambos divididos em partes iguais.</h3>\r\n",
+    "\r\n",
+    "<h2 style=\"color:darkgray\"> Do resgate do prêmio </h2>\r\n",
+    "<h3> Deve ser realizado um cadastro no site do programa em até 90 dias contados a partir do 15º dia do mês sub-sequente à data do sorteio</h3>\r\n",
+    "mais informações podem ser vistas no <a href=\"https://www.notamspremiada.ms.gov.br/\">site do programa Nota MS Premiada</a></h3>\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Importação da Biblioteca pandas para trabalhar os dados"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "source": [
     "import pandas as pd"
    ],
@@ -25,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 70,
    "source": [
     "def cont_acertos(premiados_dezenas, sorteio_dezenas):\r\n",
     "  return len(premiados_dezenas.intersection(sorteio_dezenas))"
@@ -42,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 71,
    "source": [
     "df_premiados = pd.read_excel('listapremiados.xlsx', parse_dates=['premiados_mes'])"
    ],
@@ -58,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 72,
    "source": [
     "df_premiados['premiados_dezenas'] = df_premiados['premiados_dezenas'].str.split(' ')"
    ],
@@ -74,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 73,
    "source": [
     "df_premiados.dtypes"
    ],
@@ -92,7 +113,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 56
+     "execution_count": 73
     }
    ],
    "metadata": {}
@@ -106,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "source": [
     "df_sorteios = pd.read_excel('dezenasSorteadas.xlsx', parse_dates=['sorteio_mes'])"
    ],
@@ -123,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 75,
    "source": [
     "df_sorteios.dtypes"
    ],
@@ -138,7 +159,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 58
+     "execution_count": 75
     }
    ],
    "metadata": {}
@@ -152,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "source": [
     "df_sorteios.sorteio_dezenas = df_sorteios.sorteio_dezenas.str.split(' ')"
    ],
@@ -168,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 77,
    "source": [
     "df_sorteios['mes'] = df_sorteios['sorteio_mes']\r\n",
     "df_premiados['mes'] = df_premiados['premiados_mes']\r\n"
@@ -185,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "source": [
     "df_premiados = pd.merge(df_premiados,df_sorteios,on='mes')"
    ],
@@ -201,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 79,
    "source": [
     "df_premiados['premiados_dezenas'] = df_premiados['premiados_dezenas'].apply(lambda x: set(x))\r\n",
     "df_premiados['sorteio_dezenas'] = df_premiados['sorteio_dezenas'].apply(lambda x: set(x))"
@@ -218,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 80,
    "source": [
     "df_premiados['acertos'] = df_premiados.apply(lambda x: cont_acertos(x.premiados_dezenas, x.sorteio_dezenas), axis=1)"
    ],
@@ -236,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 81,
    "source": [
     "df_premiados_mes_municipio = df_premiados.groupby(['mes','premiados_municipio']).agg({'count'})['premiados_cpf']\r\n",
     "df_premiados_mes_municipio = df_premiados_mes_municipio['count'].groupby('mes',group_keys=False).nlargest(999)\r\n",
@@ -263,7 +284,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 64
+     "execution_count": 81
     }
    ],
    "metadata": {}
@@ -277,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 82,
    "source": [
     "df_premiados_mes_municipio_pivot = df_premiados\r\n",
     "df_premiados_mes_municipio_pivot.fillna(0)\r\n",
@@ -645,7 +666,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 65
+     "execution_count": 82
     }
    ],
    "metadata": {}
@@ -659,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 83,
    "source": [
     "df_premiados.sort_values(['acertos'], ascending=False).where(df_premiados['acertos'] == 6)\r\n",
     "df_ganhadores_6_acertos_mes_municipio = pd.pivot_table(\r\n",
@@ -1046,7 +1067,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 66
+     "execution_count": 83
     }
    ],
    "metadata": {}
@@ -1060,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 84,
    "source": [
     "df_premiados_6_acertos_cidade = df_premiados.where(df_premiados['acertos'] ==6)\r\n",
     "df_premiados_6_acertos_cidade.dropna()\r\n",
@@ -1108,7 +1129,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 67
+     "execution_count": 84
     }
    ],
    "metadata": {}
@@ -1124,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 85,
    "source": [
     "df_sortudos = df_premiados.groupby(['premiados_municipio','premiados_cpf']).agg({'count'})['premiados_dezenas']\r\n",
     "df_sortudos = df_sortudos.where(df_sortudos['count'] >1 ).dropna()\r\n",
@@ -1352,7 +1373,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 68
+     "execution_count": 85
     }
    ],
    "metadata": {}
